--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 restarttime = 01:00
-voicechannel = 
+voicechannel = 614771829629779969
 textchannel = 523862163425853462
 ladderchannel = 
 
